--- a/style.css
+++ b/style.css
@@ -14,8 +14,13 @@
        justify-items: center;
        align-items: center;
        height: 100vh;
-      
     }
-
+.caixa-principal{
+   background-color: var(--cor-principal);
+   width: 90%;
+   max-width: 600px;
+   text-align: center;
+   padding: 20px;
+}
 
 
